--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "ms": "^2.0.0",
+    "mysql2": "^3.9.7",
     "napi-build-utils": "^1.0.2",
     "negotiator": "^0.6.3",
     "node-abi": "^3.62.0",
